--- a/css/dd.css
+++ b/css/dd.css
@@ -92,7 +92,7 @@ h4 {
   text-transform: uppercase;
 }
 img {
-  width: 100%;
+ /* width: 100%; */
 }
 img.pull-right {
   margin: 0 0 1.5em 1.5em;
@@ -207,7 +207,7 @@ strong.highlight {
   padding: 0 30px;
   margin: 0;
   height: 40px;
-  line-height: 40px;
+  /* line-height: 40px; */ 
   display: block;
 }
 .title hr {
@@ -281,6 +281,7 @@ article .header {
 
 
 /********************************* From the Dog Blog ********************************/
+
 .dogBlog .thumb {
   max-width: 201px;
   float: left;
@@ -288,6 +289,7 @@ article .header {
   -webkit-border-radius: 10px;
   border-radius: 10px;
 }
+
 .dogBlog .foot {
   display: block;
   margin: 20px 0 0 0;
@@ -299,6 +301,10 @@ article .header {
   margin-left: 20px;
 }
 
+.dogBlog .snippet {
+	 display: block;
+	 padding-left : 100px;
+}
 
 
 
@@ -477,11 +483,27 @@ header .navbar .navbar-nav li a {
   margin: 5px 0 0 0;
   background: none;
 }
-header .navbar .navbar-nav li.active>a,
+header .navbar .navbar-nav li.active > a {
+	
+	color: #01325a;;
+}
 header .navbar .navbar-nav li a:hover {
-  color: #281c4c;
+  color: #01325a;
   border-bottom: 5px solid #01325a;
 }
+
+header .navbar .navbar-nav li.active>a, header .navbar .navbar-nav li a:hover .caret {
+	 border-bottom-color: #01325a;
+     border-top-color: #01325a;
+}
+
+
+header .navbar .navbar-nav .dropdown.open a  .caret {
+	 border-bottom-color: #01325a;
+     border-top-color: #01325a;
+}
+
+
 header .navbar .navbar-nav .dropdown ul {
   font-size: 0.9em;
   margin: 0 0 0 -2px;
@@ -503,14 +525,22 @@ header .navbar .navbar-nav .dropdown ul li a {
   height: 28px;
   line-height: 28px;
 }
-header .navbar .navbar-nav .dropdown ul li.active a,
+/* menu items */
+header .navbar .navbar-nav .dropdown ul li.active a { color: #01325a; }
+
 header .navbar .navbar-nav .dropdown ul li a:hover {
   border-width: inherit;
-  border-color: inherit;
+  
+  /*background: #01325a; */
+  color: #01325a;
 }
 header .navbar .navbar-nav .dropdown.open a {
   background-color: transparent;
 }
+
+
+
+
 header .navbar .navbar-contact {
   margin: 20px 0;
   padding: 0 10px 0 0;
@@ -526,12 +556,13 @@ header .navbar .navbar-contact {
   background: #f5f5f5;
 }
 
-
-
- .announcements img{
- 
+.announcements .thumb {
+  max-width: 201px;
+  float: left;
+  margin: 0 30px 0 0;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
 }
-
 
 
 
@@ -937,4 +968,14 @@ footer .bottom-foot a:hover{
    width: 75%;
 }
 
+.alignright {
+  float: right !important;
+}
+.alignleft {
+  float: left !important;
+}
 
+#iwantdaycare {
+	
+	margin-bottom:25px; 
+}
