lots of update announcements style

--- a/css/dd.css
+++ b/css/dd.css
@@ -565,6 +565,10 @@ header .navbar .navbar-contact {
 }
 
 
+.announcements li {
+	font-size: 1.0em;
+}
+
 
 /************************************ Team *********************************/
 #team .thumbnail {
