--- a/css/dd.css
+++ b/css/dd.css
@@ -41,8 +41,8 @@ address a:hover {
   color: #4ec7b8;
 }
 blockquote {
-  background: #e1e1e1;
-  border-left: 3px double #281c4c;
+
+  /*border-left: 3px double #281c4c;*/
   color: #281c4c;
   font-size: 0.9em;
   font-style: italic;
@@ -184,7 +184,6 @@ strong.highlight {
   list-style: none;
 }
 .dropdown ul li a {
-  /*display: inline-block;*/
   margin: 0;
   padding: 0 15px;
 }
@@ -218,7 +217,6 @@ strong.highlight {
   padding: 0 30px;
   margin: 0;
   height: 40px;
-  /* line-height: 40px; */ 
   display: block;
 }
 .title hr {
@@ -319,12 +317,6 @@ article .header {
 
 
 
-
-/*********************************  Labels  *******************************/
-.label.label-default {
-  background-color: #722881;
-  text-transform: uppercase;
-}
 /******************************* List Groups *****************************/
 .list-group .list-group-item {
   background: none;
@@ -542,6 +534,7 @@ header .navbar .navbar-nav .dropdown ul li a {
   height: 28px;
   line-height: 28px;
 }
+
 /* menu items */
 header .navbar .navbar-nav .dropdown ul li.active a { color: #01325a; }
 
@@ -718,25 +711,6 @@ aside h3 {
 aside i {
   color: #281c4c;
 }
-aside .recent-news {
-  clear: both;
-  margin: 0 0 20px 0;
-  min-height: 75px;
-}
-aside .recent-news img {
-  width: 75px;
-  height: 75px;
-  float: left;
-  margin: 0 10px 0 0;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;  
-}
-aside .recent-news a {
-  color: #52c1ba;
-}
-aside .recent-news a:hover {
-  color: #52c1ba;
-}
 
 
 
@@ -825,6 +799,10 @@ footer .bottom-foot a:hover{
   opacity: 0.7;
 }
 
+
+
+/************************ misc ************************/
+
 #map-canvas {
    max-height: 400px;
 }
@@ -833,12 +811,6 @@ footer .bottom-foot a:hover{
    width: 75%;
 }
 
-.alignright {
-  float: right !important;
-}
-.alignleft {
-  float: left !important;
-}
 
 #iwantdaycare {
 	
