--- a/css/dd.css
+++ b/css/dd.css
@@ -551,12 +551,11 @@ header .navbar .navbar-nav .dropdown.open a {
 
 
 
-header .navbar .navbar-contact {
-  margin: 20px 0;
-  padding: 0 10px 0 0;
- 
-}
 
+header .navbar .navbar-contact {
+    margin: 20px 0;
+    padding: 0 0 0 75px;
+}
 
 
 /************************************ Announcements *********************************/
