--- a/css/dd.css
+++ b/css/dd.css
@@ -81,7 +81,7 @@ h6 {
 }
 h2 {
   font-size: 1.7em;
-  /*line-height: 0.7em;*/
+  line-height: 0.7em;
   margin: 0 0 20px 0;
   padding: 0;
 }
@@ -90,7 +90,7 @@ h3 {
   padding: 0;
 }
 h4 {
-  
+  text-transform: uppercase;
 }
 img {
  /* width: 100%; */
@@ -115,13 +115,8 @@ p a:hover {
 ul {
   padding: 0;
 }
-
-strong {
-  color: #281c4c;
-}
-
 strong.highlight {
-  background:  #281c4c;
+  background: #722881;
   padding: 0 5px;
   color: #fff;
 }
