changed p text color

--- a/css/dd.css
+++ b/css/dd.css
@@ -101,7 +101,7 @@ img.pull-left {
   margin: 0 1.5em 1.5em 0;
 }
 p {
-  color: #9499af;
+  color: #05053;
   font-size: 0.9em;
   line-height: 1.8em;
   font-family: 'Montserrat', sans-serif;
