--- a/css/dd.css
+++ b/css/dd.css
@@ -15,7 +15,7 @@
 
 /************************* General Styles for Tags *************************/
 a {
-  color:  #281c4c; 
+  color:  #281c4c;
 }
 a:hover {
   text-decoration:none;
@@ -89,7 +89,7 @@ h3 {
   padding: 0;
 }
 h4 {
-  
+
 }
 img {
  /* width: 100%; */
@@ -140,7 +140,7 @@ strong.highlight {
   transition: all 0.5s ease;
 }
 .btn.btn-default {
-  background: #4ec7b8; 
+  background: #4ec7b8;
   border: none;
   color: #fff;
   text-transform: uppercase;
@@ -245,8 +245,8 @@ strong.highlight {
 .bannercontainer #hm-main{
 	height: 100%;
 	min-height: 600px;
-	 
-	background: transparent url("../../dd2/img/hm-main.jpg") no-repeat center center; 
+
+	background: transparent url("../../dd2/img/hm-main.jpg") no-repeat center center;
 	background-size: cover;
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
@@ -258,7 +258,7 @@ strong.highlight {
 	position:relative;
 	padding-top: 50px;
 	padding-left: 40px;
-	
+
 }
 
 
@@ -284,7 +284,7 @@ strong.highlight {
 
 
 /********************************** Article ********************************/
-  
+
 article .header {
   color: #9499af;
   font-size: 1.3em;
@@ -483,7 +483,7 @@ header .navbar .navbar-nav {
 header .navbar .navbar-nav li a {
   color: #9499af;
   line-height: 60px;
-  padding: 0 0.9em;
+  padding: 0 0.8em;
   font-weight: bold;
   margin: 5px 0 0 0;
   background: none;
@@ -496,7 +496,7 @@ header .navbar .navbar-nav li a:hover {
 }
 
 .nav .open>a, .nav .open>a:hover, .nav .open>a:focus {
-	
+
 		color: #01325a;
 }
 
@@ -541,7 +541,7 @@ header .navbar .navbar-nav .dropdown ul li a {
 header .navbar .navbar-nav .dropdown ul li.active a { color: #01325a; }
 
 header .navbar .navbar-nav .dropdown ul li a:hover {
- 
+
   border-width:thin;
   border-bottom-color:#01325a;
   color: #01325a;
@@ -556,10 +556,12 @@ header .navbar .navbar-nav .dropdown.open a {
 header .navbar .navbar-contact {
   margin: 20px 0;
   padding: 0 10px 0 0;
- 
+
 }
 
-
+#navCont{
+   100vw
+}
 
 /************************************ Announcements *********************************/
 
@@ -595,7 +597,7 @@ header .navbar .navbar-contact {
 }
 
 #team .thumbnail .caption{
-  padding-right:0; 
+  padding-right:0;
   padding-left:0;
   padding-top:30px;
 }
@@ -799,7 +801,7 @@ footer .bottom-foot a:hover{
   font-size: 20px;
 }
 
-.scrollup:hover { 
+.scrollup:hover {
   opacity: 0.7;
 }
 
@@ -817,12 +819,12 @@ footer .bottom-foot a:hover{
 
 
 #iwantdaycare {
-	
-	margin-bottom:25px; 
+
+	margin-bottom:25px;
 }
 
 .sectionsp {
-  padding-bottom :20px;	
+  padding-bottom :20px;
 }
 
 #backtoblog {
@@ -831,5 +833,5 @@ footer .bottom-foot a:hover{
 
 .dogblogteaser {
 
-  padding-bottom: 20px; 
+  padding-bottom: 20px;
 }
