--- a/css/dd.css
+++ b/css/dd.css
@@ -560,7 +560,7 @@ header .navbar .navbar-contact {
 }
 
 #navCont{
-   100vw
+   width:100vw;
 }
 
 /************************************ Announcements *********************************/
