--- a/css/dd.css
+++ b/css/dd.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-
+html,body {height:100%;width:100%;}
 
 /************************** Import Fonts and Icons *************************/
 
@@ -842,3 +842,7 @@ footer .bottom-foot a:hover{
 #front-description {
   font-size: 32px;
 }
+
+.jumbotron {background-color:inherit;}
+.container-full-bg {width:100%;height:100%;max-width:100%;background-position:center;background-size:cover;}
+.container-full-bg .container, .container-full-bg .container .jumbotron {height:100%;width:100%;}
